<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="391dp"
        android:layout_height="595dp"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="3"
        tools:layout_editor_absoluteX="12dp"
        tools:ignore="MissingConstraints,UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:src="@drawable/dry_cranberry"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|bottom"
                    android:text="@string/cranberry"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/berry_burlesque"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/berry_burlesque"
                    android:gravity="center|bottom"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:src="@drawable/citrus_fizz"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/citrus_fizz"
                    android:gravity="center|bottom"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:src="@drawable/lavender_lemonade"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lavender_lemonade"
                    android:gravity="center|bottom"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:src="@drawable/shirley_ginger"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/shirley_ginger"
                    android:gravity="center|bottom"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:src="@drawable/vintage_point"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/vintage_point"
                    android:gravity="center|bottom"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>